<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="teamatom.colormesh.About">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about"
        android:id="@+id/about"
        android:textSize="35sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt_game"
        android:id="@+id/abt_game"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:layout_below="@+id/about"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmedesc"
        android:id="@+id/abtgam"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/abt_game"
        android:layout_alignLeft="@+id/abt_game"
        android:layout_alignStart="@+id/abt_game" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt_dev"
        android:id="@+id/abtdev"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/abtgam"
        android:layout_alignLeft="@+id/abtgam"
        android:layout_alignStart="@+id/abtgam" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devdesc"
        android:id="@+id/devdesc"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/abtdev"
        android:layout_alignLeft="@+id/abtdev"
        android:layout_alignStart="@+id/abtdev" />
</RelativeLayout>
